--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,10 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
+            <version>42.7.2</version>
         </dependency>
+
+
 
         <!-- Lombok (vereinfachte Code-Schreibweise) -->
         <dependency>
