some small changes - nothing special

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/salesdb
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
+
+# JPA-Einstellungen
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
