Database Name changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=salesAPI
-spring.datasource.url=jdbc:postgresql://localhost:5432/salesdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/product_import_db
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
