SQL Datenbank anstelle von PostgreSQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,5 @@
 spring.application.name=salesAPI
-spring.datasource.url=jdbc:postgresql://localhost:5432/product_import_db
-spring.datasource.username=postgres
-spring.datasource.password=admin
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.maximum-pool-size=10
-
-# JPA-Einstellungen
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.open-in-view=false
+spring.datasource.url=jdbc:mariadb://localhost:3306/DatenbanknameHier
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
