--- a/pom.xml
+++ b/pom.xml
@@ -53,11 +53,10 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!-- PostgreSQL Treiber -->
+        <!-- MariaDB Treiber -->
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>42.7.2</version>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
         </dependency>
 
         <!-- Lombok (vereinfachte Code-Schreibweise) -->
